--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "denisaputra/webtriplog",
+    "name": "satujamsaja/triplog",
     "license": "proprietary",
     "type": "project",
     "autoload": {
