Add categories page, use 1 location timeline for all location view, update entity onDelete to use cascade, update fixtures

--- a/src/TriplogBundle/DataFixtures/ORM/triplogfixtures.yml
+++ b/src/TriplogBundle/DataFixtures/ORM/triplogfixtures.yml
@@ -7,7 +7,7 @@ TripLogBundle\Entity\Trip:
 
 TripLogBundle\Entity\TripCategory:
     trip.category_{1..10}:
-        tripCatName: '<username()>'
+        tripCatName: '<word()>'
         createdAt: '<dateTimeBetween("-200 days", "now")>'
 
 TripLogBundle\Entity\TripLocation:
