Add new service trip.data_renderer. Change all controller to use service. Add api call to location list for map.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,6 @@ services:
     #service_name:
     #    class: AppBundle\Directory\ClassName
     #    arguments: ['@another_service_name', 'plain_value', '%parameter_name%']
+    trip.data_renderer:
+        class: TriplogBundle\Service\TripDataRenderer
+        arguments: ['@doctrine.orm.entity_manager', '@router']
