--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,3 +31,6 @@ security:
 
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
             #form_login: ~
+
+    access_control:
+        - { path: ^/admin, roles: ROLE_USER }
