--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,7 +6,7 @@ security:
         TriplogBundle\Entity\User: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_MANAGE_CONTENT, ROLE_MANAGE_TRIP, ROLE_MANAGE_CATEGORY, ROLE_MANAGE_LOCATION]
+        ROLE_ADMIN: [ROLE_MANAGE_CONTENT, ROLE_MANAGE_TRIP, ROLE_MANAGE_CATEGORY, ROLE_MANAGE_LOCATION, ROLE_MANAGE_USER]
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
