Add file upholder service.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -21,3 +21,7 @@ services:
         tags:
             - { name: doctrine.event_subscriber }
 
+    trip.file_uploader:
+        class: TriplogBundle\Service\FileUploader
+        arguments: ['%image_directory%']
+
