--- a/src/TriplogBundle/DataFixtures/ORM/triplogfixtures.yml
+++ b/src/TriplogBundle/DataFixtures/ORM/triplogfixtures.yml
@@ -33,8 +33,8 @@ TripLogBundle\Entity\User:
         firstName: <firstName()>
         lastName: <lastName()>
         gender: <gender()>
-        profilePicture: '<imageUrl(100,100,"people")>'
+        profilePicture: 'placeholder.jpg'
         plainPassword: 'wiro212'
-        roles: ['ROLE_ADMIN']
+        roles: 'ROLE_ADMIN'
         createdAt: '<dateTimeBetween("-200 days", "now")>'
 
